# haskell-flat-figure

./: CHANGELOG.md  README.md  haskell-flat-figure.cabal  input.txt
app/: Main.hs
src/: CommandList.hs  List.hs  Shapes.hs
