cabal-version:      2.4
name:               haskell-flat-figure
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Anonumka
maintainer:         cergeu912@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs:   src
    exposed-modules:  List
                    , Shapes
                    , CommandList
    build-depends:    base >=4.5
    default-language: Haskell2010
    ghc-options:     -O2

executable haskell-flat-figure
    hs-source-dirs:   app
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.5
                    , haskell-flat-figure
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:     -O2
